infra/email-ui-roundcube/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: roundcube-docker-bridge
  namespace: website
subsets:
  - addresses:
      - ip: 172.18.0.3
    ports:
      - port: 8080
