infra/email-ui-roundcube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcube-docker-bridge
  namespace: website
spec:
  selector:
    app: roundcube-bridge-placeholder
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
