infra/email-ui-roundcube/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: roundcube-ingress-route
  namespace: website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webmail.marafis.com`)
      kind: Rule
      services:
        - name: 10.0.0.2 # ◄── Direct target down to your host's IP address
          port: 8080      # Roundcube physical exposure port
  tls:
    secretName: webmail-marafis-tls # Binds your validated Let's Encrypt secret keys
