infra/email-ui-roundcube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundcube-ingress
  namespace: website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-wildcard" # ◄── Uses your cluster's Cert-Manager
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
    - hosts:
        - webmail.marafis.com
      secretName: webmail-marafis-tls
  rules:
    - host: webmail.marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roundcube-docker-bridge
                port:
                  number: 8080
